Criação das interfaces shared

--- a/PaymentContext/PaymentContext.Shared/PaymentContext.Shared.csproj
+++ b/PaymentContext/PaymentContext.Shared/PaymentContext.Shared.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Flunt" Version="1.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
